# dummy-python-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  git-setup.md  pyproject.toml  test-api.sh
app/: main.py
